samples/_failures_safe/1761519414_6593e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e57a168.c: In function ‘main’:
./samples/SAFE/__tmp_5e57a168.c:140:5: error: expected expression at end of input
  140 |     if (len > 0 &&
      |     ^~
./samples/SAFE/__tmp_5e57a168.c:140:5: error: expected declaration or statement at end of input
